config/k8s/production/ns.yaml
kind: Namespace

apiVersion: v1

metadata:
  name: app-production

  labels:
    name: app-production
