config/k8s/production/memcached.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: memcached
  namespace: app-production

  labels:
    app: memcached

spec:
  replicas: 1
  strategy: {}

  selector:
    matchLabels:
      app: memcached

  template:

    metadata:
      creationTimestamp: null
      labels:
        app: memcached

    spec:

      containers:

      - name: memcached
        image: memcached:1.6.15-alpine3.16
        imagePullPolicy: Always

        ports:
          - containerPort: 11211
---
apiVersion: v1

kind: Service

metadata:
  name: memcached
  namespace: app-production

  labels:
    run: memcached

spec:
  type: LoadBalancer

  selector:
    app: memcached

  ports:
  - port: 11211
    protocol: TCP
