config/k8s/production/ingress.yaml
---
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: app
  namespace: app-production

  annotations:

spec:
  ingressClassName: nginx

  rules:
    - host: 'prod.awsops.ml'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 3000

    - host: '*.prod.awsops.ml'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 3000
